# natural-language-processing

./: Makefile  README.md  pyproject.toml
homeworks/hw01_word_vectors/: README.md
homeworks/hw02_attention/: README.md  assignment_attention.ipynb
homeworks/hw03_text_classification/: README.md
homeworks/hw04_dqn/: homework_pytorch_main.ipynb
homeworks/hw3_bert/: hw_attention_and_bert.ipynb
week01_word_embeddings/: README.md  practice01_dealing_with_word_embeddings.ipynb
week02_machine_translation/: README.md
week02_seq2seq_and_attention/: README.md  practice02_seq2seq_for_nmt.ipynb
week03_attention/: README.md  practice_Attention_basics_and_tensorboard.ipynb
week03_transformer_architecture/: README.md  practice_03_transformer_architecture_implementation.ipynb
week04_bert/: README.md  practice04_bert_for_text_classification.ipynb
week05_generative/: README.md  practice05_1_tokenizers.ipynb  practice05_2_text_generation_parameters.ipynb  practice05_3_loss_functions.ipynb
week05_transformer/: README.md  transformer.ipynb
week06_efficient_training_and_inference/: README.md  practice06_1_kv_cache.ipynb  practice06_2_flash_attention.ipynb
week07_LLM_v1/: README.md  final_llama_practice.ipynb
week08_LLM_v2/: README.md  mistral_api_practice.ipynb
week09_Advanced_techniques_LLM_v1/: PEFT.ipynb  README.md
week10_Advanced_techniques_LLM_v2/: README.md  modelsMerging.ipynb
week11_RAG_agents/: RAG_+_function_calling.ipynb
