[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [{ name = "lwtztea", email = "luneva.na@phystech.edu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy (>=2.2.3,<3.0.0)", "matplotlib (>=3.10.1,<4.0.0)", "transformers (>=4.49.0,<5.0.0)", "pandas (>=2.2.3,<3.0.0)", "torch (>=2.6.0,<3.0.0)", "umap (>=0.1.1,<0.2.0)", "nltk (>=3.9.1,<4.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "bokeh (>=3.6.3,<4.0.0)", "torchtext (>=0.18.0,<0.19.0)", "datasets (>=3.4.1,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^25.1.0" }
pylint = "^3.3.5"
unify = "^0.5"
isort = "^6.0.1"
flake8 = "^7.1.2"
jupyterlab-flake8 = "^0.7.1"
nbqa = "^1.9.1"
yapf = "^0.43.0"
mdformat = "^0.7.22"
ruff = "^0.9.10"
